# ccp4i2

./: .dockerignore  .gitignore  CCP4I_CLASSIC_MODE_THINKING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  RELEASE_NOTES  SECURITY_FIX_TEAMS_BACKEND.md  SECURITY_QUICK_REFERENCE.md  ccp4i2_architecture_evolution.pptx  pyproject.toml  pytest.ini  pywrap.cc  requirements.txt  run_test.sh
server/: .dockerignore  .gitignore  MANIFEST.in  README.md  asgi.py  baseline_api_results.txt  baseline_i2run_results.txt  ccp4dll.py  entrypoint.sh  manage.py  manage_cli.py  post_fix_api_results.txt  post_fix_i2run_results.txt  pyproject.toml  pyproject.toml.safe  pytest.ini  requirements-azure.txt  requirements.txt  run_i2run_baseline.sh  run_job_safe.sh  run_test.sh  startup-management.sh  startup-worker.sh  startup.sh  worker.py
server/.test-baselines/: .gitignore
server/.test-baselines/ccp4-20251105/: SUMMARY.md  results.xml
server/.test-baselines/ccp4-20260520/: SUMMARY.md  results.xml
server/ccp4i2/: __init__.py  requirements-runtime.txt
server/ccp4i2/api/: FileImportViewSet.py  FileTypeViewSet.py  FileUseViewSet.py  FileViewSet.py  JobViewSet.py  MODERNIZATION_EXAMPLE.md  MODERNIZATION_PROGRESS.md  ProjectExportViewSet.py  ProjectGroupMembershipViewSet.py  ProjectGroupViewSet.py  ProjectTagViewSet.py  ProjectViewSet.py  StagedUploadViewSet.py  VIEWSET_MODERNIZATION_MAP.md  admin_views.py  config.py  serializers.py  urls.py  views.py
server/ccp4i2/baselayer/: QtCore.py  QtGui.py  __init__.py
server/ccp4i2/cli/: __init__.py  i2.py
server/ccp4i2/config/: asgi.py  logging_config.py  preferences.py  settings.py  test_settings.py
server/ccp4i2/core/: CCP4Annotation.py  CCP4ClipperUtils.py  CCP4ComFilePatchManager.py  CCP4ComTemplate.py  CCP4Container.py  CCP4CootData.py  CCP4CustomManager.py  CCP4CustomTaskManager.py  CCP4Data.py  CCP4ErrorHandling.py  CCP4File.py  CCP4I2Runner.py  CCP4ImportedJobManager.py  CCP4MathsData.py  CCP4ModelData.py  CCP4Modules.py  CCP4NonGuiProjectUtils.py  CCP4PerformanceData.py  CCP4PluginScript.py  CCP4Preferences.py  CCP4ProcessManager.py  CCP4ProjectBasedTesting.py  CCP4ProjectsManager.py  CCP4RefmacData.py  CCP4TaskManager.py  CCP4Utils.py  CCP4XtalData.py  CDmDomain.py  CPurgeProject.py  PhilPluginScript.py  _matthews_data.py  async_process_manager.py  mgimports.py  tasks.py
server/ccp4i2/db/: IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  USAGE_EXAMPLES.md  WORKFLOW_ANALYSIS.md  __init__.py  async_db_handler.py  ccp4i2_django_db_handler.py  ccp4i2_django_dbapi.py  ccp4i2_django_projects_manager.py  ccp4i2_django_wrapper.py  ccp4i2_static_data.py  config.py  export_project.py  import_i2xml.py  import_sqlite.py  models.py  signals.py
server/ccp4i2/i2run/: CCP4i2RunnerDjango.py
server/ccp4i2/lib/: async_clone_job.py  async_create_job.py  async_import_files.py  async_run_job.py  campaign_scene.py  cdata_utils.py  pandda_export.py  parse.py  sequence.py  utils.py
server/ccp4i2/middleware/: __init__.py  azure_ad_auth.py  azure_auth.py  corp.py  dev_auth.py
server/ccp4i2/pimple/: MGQTmatplotlib.py  logtable.py
server/ccp4i2/qticons/: CachedPixmapPaths.json
server/ccp4i2/references/: aimless_pipe.medline.txt  buster.medline.txt  nucleofind.bibtext.txt  qtpisa.medline.txt
server/ccp4i2/report/: CCP4ReportGenerator.py  CCP4ReportObjects.py  CCP4ReportParser.py  CCP4RvapiParser.py  __init__.py  actions.py  base.py  core.py  elements.py  errors.py  graphs.py  grid.py  io_data.py  metadata.py  pictures.py
server/ccp4i2/scene_contracts/: README.md  moorhen-scene.structured.v1.json  moorhen-scene.system-prompt.v1.md
server/ccp4i2/scripts/: run_job_safe.cmd  run_job_safe.sh
server/ccp4i2/smartie/: baubles.py  qtrgeneric.py  qtrview.py  show_summary.py  smartie.py  smartie_overview.html
server/ccp4i2/tests/: inspect_db_results.py  inspect_test_db.py  show_last_test_results.sh  standalone_db_test.py  test_async_db_handler.py  test_async_db_integration.py  test_async_plugin_with_database.py  test_ccontainer.py  test_cdata_database_integration.py  test_cdatafile_paths.py  test_chainsaw.py  test_cimportunmerged_validity.py  test_container_child_access.py  test_converter_comparison.py  test_count_all_control_params.py  test_count_expanded_params.py  test_cpdbdatafile_import.py  test_cpluginscript.py  test_cpluginscript.py.bak2  test_cpluginscript_async.py  test_create_job_title.py  test_creport_generator.py  test_ctruncate_conversion.py  test_def_xml_workflow.py  test_demo_copycell_database.py  test_demo_copycell_integration.py  test_demo_copycell_real.py  test_deprecation_warnings.py  test_events.py  test_fileContent_autoload.py  test_full_def_xml.py  test_fundamental_cdata_types.py  test_get_leaf_paths.py  test_hash_collision_fix.py  test_i2run_ncycles.py  test_json_encoder_standalone.py  test_makepluginobject.py  test_ncycles_in_xml.py  test_obs_conversions.py  test_old_api_compatibility.py  (+11 more)
server/ccp4i2/tipsOfTheDay/: 22.html  23.html  27.html  32.html  7.html
server/ccp4i2/utils/: dictionaryAccumulator.py  phil_handlers.py  phil_shims.py  phil_to_cdata.py  reconstructDBFromXML.py  reconstructFromDBXML.py  reconstructFromDirectoryList.py
server/ccp4i2/wrappers/: PHIL_TASK_GUIDE.md  import_common.py
server/ccp4x/: __init__.py  __main__.py
server/ccp4x/api/: FileViewSet.py  JobViewSet.py  MODERNIZATION_EXAMPLE.md  MODERNIZATION_PROGRESS.md  ProjectTagViewSet.py  ProjectViewSet.py  config.py
server/ccp4x/config/: logging_config.py  settings.py  test_settings.py
server/ccp4x/db/: IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  README.md  USAGE_EXAMPLES.md  __init__.py  async_db_handler.py  ccp4i2_django_db_handler.py  ccp4i2_django_dbapi.py  ccp4i2_django_projects_manager.py  ccp4i2_django_wrapper.py  import_i2xml.py  project_json.py
server/ccp4x/i2run/: CCP4i2RunnerBase.py  README.md  i2run.sh
server/ccp4x/lib/: async_clone_job.py  async_create_job.py  async_import_files.py  async_run_job.py  cdata_utils.py  links.py  (+3 more)
server/scripts/: gen_runtime_lock.py
(+5772 files in other folders)
