cmake_minimum_required(VERSION 3.12)
project(ccp4i2 C CXX)

if(APPLE)
   EXEC_PROGRAM(uname ARGS -v  OUTPUT_VARIABLE DARWIN_VERSION)
   STRING(REGEX MATCH "[0-9]+" DARWIN_VERSION ${DARWIN_VERSION})
   MESSAGE(STATUS "DARWIN_VERSION=${DARWIN_VERSION}")
   IF (DARWIN_VERSION LESS 10)
    INCLUDE_DIRECTORIES ( /Developer/Headers/FlatCarbon )
   ENDIF (DARWIN_VERSION LESS 10)

   find_library(CARBON_LIBRARY Carbon)
   find_library(COREFOUNDATION_LIBRARY CoreFoundation)
   mark_as_advanced (CARBON_LIBRARY
                     )
endif(APPLE)

find_package(Python ${PYTHON_VERSION} REQUIRED COMPONENTS Interpreter Development)
message(STATUS "Python interpreter: ${Python_EXECUTABLE}")
message(STATUS "Python.h is in: ${Python_INCLUDE_DIRS}")
message(STATUS "Python libraries: ${Python_LIBRARIES}")
message(STATUS "Python module path: ${Python_SITELIB}")
if(WIN32)
    string(REPLACE "\\" "/" Python_SITELIB "${Python_SITELIB}")
endif(WIN32)

include_directories(${Python_INCLUDE_DIRS})

if(APPLE)
  add_executable(ccp4i2_pywrapper pywrap.cc)
  target_link_libraries(ccp4i2_pywrapper ${Python_LIBRARIES})
  set_target_properties(ccp4i2_pywrapper PROPERTIES OUTPUT_NAME ccp4i2)

  set( PROGNAME ccp4i2 )
  set( MACOSX_BUNDLE_ICON_FILE ccp4i2.icns )
  set( OSX_ICON_FILE ${CMAKE_SOURCE_DIR}/MacOSX/Resources/ccp4i2.icns )
  set( MACOSX_BUNDLE_SHORT_VERSION_STRING 1.0.0 )
  set( MACOSX_BUNDLE_VERSION 1.0 )
  set( MACOSX_BUNDLE_LONG_VERSION_STRING Version 1.0.0 )
  set( MACOSX_BUNDLE_BUNDLE_NAME ccp4i2 )

  set (QTMG_SRC ccp4i2.cc)
  set_source_files_properties(${OSX_ICON_FILE} PROPERTIES
                              MACOSX_PACKAGE_LOCATION Resources)
  add_executable( ${PROGNAME} MACOSX_BUNDLE ${QTMG_SRC} ${OSX_ICON_FILE} )
  target_link_libraries(${PROGNAME} ${COREFOUNDATION_LIBRARY})
  install(TARGETS ${PROGNAME} DESTINATION .)
  install(CODE "
    include(BundleUtilities)
    set(BU_CHMOD_BUNDLE_ITEMS 1) # needed for libssl
    fixup_bundle(\"\$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/${PROGNAME}.app\" \"\" \"\")
  ")

endif()

if(APPLE)
  install(TARGETS ccp4i2_pywrapper DESTINATION libexec)
  install(DIRECTORY ${CMAKE_SOURCE_DIR}/MacOSX DESTINATION ${Python_SITELIB}/ccp4i2 USE_SOURCE_PERMISSIONS)
endif()
install(DIRECTORY ${CMAKE_SOURCE_DIR}/bin DESTINATION ${Python_SITELIB}/ccp4i2 USE_SOURCE_PERMISSIONS)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/core DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/data DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/dbapi DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/demo_data DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/docs DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/googlecode DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/local_setup DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/model DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/pimple DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/pipelines DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/qtcore DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/qtgui DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/qticons DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/report DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/smartie DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/svgicons DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/tasks DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/test DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/utils DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/wrappers DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/wrappers2 DESTINATION ${Python_SITELIB}/ccp4i2)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/tipsOfTheDay DESTINATION ${Python_SITELIB}/ccp4i2)
install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/ccp4i2 DESTINATION bin)
install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/ccp4i2-update DESTINATION bin)
install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i2run-inst DESTINATION bin RENAME i2run)

if(WIN32)
  install(FILES ${CMAKE_SOURCE_DIR}/Windows/ccp4i2.ico DESTINATION .)
  install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/ccp4i2.bat DESTINATION bin)
  install(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i2run.bat DESTINATION bin)
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  install(FILES ${CMAKE_SOURCE_DIR}/Linux/ccp4i2.png DESTINATION .)
endif()

install(FILES ${CMAKE_SOURCE_DIR}/__init__.py DESTINATION ${Python_SITELIB}/ccp4i2)
install(FILES ${CMAKE_SOURCE_DIR}/VERSION DESTINATION ${Python_SITELIB}/ccp4i2)

