[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ccp4i2"
dynamic = ["version"]
description = "CCP4i2 graphical interface for CCP4 software"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["CCP4", "X-ray", "Crystallography", "MX", "Interface"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/ccp4/ccp4i2"
Issues = "https://github.com/ccp4/ccp4i2/issues"

[tool.setuptools.dynamic]
version = { attr = "ccp4i2.__version__" }

[tool.setuptools.package-data]
ccp4i2 = ["*"]
