[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ccp4i2"
dynamic = ["version"]
description = "CCP4i2 - Graphical interface and scripting environment for CCP4"
readme = "README.md"
keywords = [
    "Crystallography",
    "CCP4",
    "Structural Biology",
    "MX",
    "Macromolecular",
    "Interface",
]
authors = [{ name = "CCP4", email = "ccp4@ccp4.ac.uk" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.9"
# Runtime dependencies for the CCP4-free control plane (API, container/validation,
# digest). These are pip wheels that the package imports at module scope, so they
# must be declared for `pip install ccp4i2` to import cleanly on a stock Python
# with no CCP4 installation. Verified empirically against a slim CPython 3.13 venv
# (imports all plugins + passes the unit suite). Heavy, execution-only packages
# (rdkit/scipy/pandas) are lazy-imported and live under the [science] extra; the
# CCP4 native toolkits (clipper, iotbx, mmtbx, ccp4mg, ccp4srs, phaser, dials,
# xia2, ...) are provided by the CCP4 suite at job-execution time and are
# deliberately NOT declared here.
dependencies = [
    "django",              # the web framework this whole backend is built on
    "gemmi",               # MTZ/PDB/mmCIF + crystallographic maths (clipper replacement)
    "numpy",
    "lxml",                # XML throughout core/containers/reports
    "lxml_html_clean",     # lxml.html.clean moved to separate package
    "pytz",
    "psutil",
    "future",              # used by crank2
    "requests",            # pdb_redo_api and other HTTP clients
    "biopython>=1.80",     # used by adding_stats_to_mmcif (sequence alignment)
    "ccp4i2-api>=0.3.4",   # auth middleware + DRF auth classes (config/settings.py)
    "djangorestframework",
    "django-cors-headers",
    "django-filter",
    "python-docx>=0.8.11",
    "requests-cache",
    "uvicorn",
    "xmlschema",
    "openpyxl",            # Excel file parsing for ADME importers
]

[project.optional-dependencies]
# Heavy packages imported lazily, only when the relevant job actually runs.
# Install with `pip install ccp4i2[science]` for fuller local execution.
science = [
    "rdkit",               # prosmart_refmac ligand SVG, acedrgNew
    "scipy",               # modelASUCheck (Hungarian assignment)
    "pandas",              # servalcat_pipe difference monitoring
]
# Test/lint toolchain — not needed at runtime. `pip install ccp4i2[dev]`.
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-django",
    "pytest-xdist",
    "mypy",
    "autopep8",
    "black",
    "isort",
]

# Dependencies provided by the CCP4 suite at job-execution time (NOT pip-declared;
# present in CCP4 site-packages, or added to sys.path by CCP4): acedrg,
# adding_stats_to_mmcif, ample, ccp4mg, ccp4srs, chem_data, clipper, dials, dxtbx,
# iotbx, iris_validation, mmtbx, mrbump, mrcfile, mrparse, phaser, phaser_ext,
# pyrvapi, simbad, xia2, pycofe (sys.path). Optional report/plotting extras
# (matplotlib, networkx, svgwrite) are likewise only needed at execution.

[project.urls]
Homepage = "https://www.ccp4.ac.uk/"
Repository = "https://github.com/ccp4/ccp4i2"
Documentation = "https://www.ccp4.ac.uk/html/INDEX.html"

[project.scripts]
i2 = "ccp4i2.cli.i2:main"
i2run = "ccp4i2.cli.i2run.main:main"

[tool.setuptools.dynamic]
version = { attr = "ccp4i2.__version__" }

[tool.setuptools.package-data]
ccp4i2 = ["**/*"]

# Keep the wheel lean. The big-ticket exclusions live in MANIFEST.in:
#   demo_data (~417 MB) — test/demo fixtures, over PyPI's 100 MB per-file limit
#   docs      (~41 MB)  — legacy Qt-era HTML help; the app links to the hosted
#                         site https://ccp4i2.gitlab.io/rstdocs/, not this dir
#   tests     (~25 MB)  — test suite, never needed at runtime
# None are read at runtime by an installed package; all remain available from a
# repo checkout. Pruning them takes the wheel/sdist from ~197 MB to ~10 MB.
#
# IMPORTANT: the authoritative exclusion is MANIFEST.in (`prune ...`). The
# exclude-package-data rules below do NOT reliably override the recursive
# package-data include ("**/*") above in current setuptools — demo_data leaked
# into the wheel despite them until MANIFEST.in was added. Keep both, but
# MANIFEST.in is what actually works.
[tool.setuptools.exclude-package-data]
ccp4i2 = [
    "demo_data/*",
    "demo_data/**/*",
    "**/*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
    | \.venv
    | client
    | node_modules
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "client", "node_modules"]
